<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fadeScrollbars="true"
    tools:context=".MenuActivity">


    <TextView
        android:id="@+id/textViewOla"
        style="@style/editTextOla"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/Ola"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tvNome"
        android:layout_width="279dp"
        android:layout_height="61dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:fontFamily="@font/archivo_black"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNome"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="263dp"
        android:layout_height="143dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:srcCompat="@drawable/th"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewWith"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alex_brush"
        android:rotation="-15"
        android:text="@string/With"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="242dp"
        android:layout_height="116dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/android"
        tools:ignore="ContentDescription,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>